--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gas-frontend",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "echarts": "^4.7.0",
     "element-ui": "^2.13.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
